# qbe-treesitter

./: .gitignore  Cargo.toml  README.md  grammar.js  package-lock.json  package.json  test.ssa
bindings/rust/: lib.rs
queries/: brackets.scm  highlights.scm  indents.scm  outline.scm
src/: grammar.json  node-types.json  parser.c
test/: test.ssa
