[package]
name = "tree-sitter-qbe"
description = "qbe grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "qbe"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/runt-lang/qbe-treesitter"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
